# open-web-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
_template/: METHODOLOGY.md  README.md  sources.md
anthem-belligerence/: .gitignore  FINDINGS.md  METHODOLOGY.md  PROCESS_LOG.md  README.md  scoring_brief.md  scoring_brief_v2.md  sources.md
anthem-belligerence/data/: batches.json  countries.json
anthem-belligerence/data/processed/: audit_sample.json  exploratory.json  findings_extra.json  indices.csv  indices.json  indices_v1.json  run.md  scores.json  scores_v1.json
anthem-belligerence/data/raw/: anthems.json
anthem-belligerence/outputs/: god-vs-guns-interactive.html
anthem-belligerence/src/: aggregate.py  explore.py  explore_extra.py  make_batches.py  merge_parts.py  merge_v2.py  plot_full.py  plot_god_vs_guns.py  plot_interactive.py
