[project]
name = "open-web-analysis"
version = "0.1.0"
description = "Qualitative-to-quantitative analyses: scoring scattered open-web evidence against explicit rubrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.9",
    "plotly>=5.24",
    "httpx>=0.27",
    "beautifulsoup4>=4.13",
    "lxml>=6.1",
]

# Treated as an application workspace, not a publishable package.
[tool.uv]
package = false
